# fastapi.ra

./: .api.env  .gitignore  CLAUDE.md  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml
.devcontainer/: add-sudoers.sh
.devcontainer/backend-container/: devcontainer.json
.devcontainer/frontend-container/: devcontainer.json
api/: pyproject.toml
back/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml
back/.devcontainer/: devcontainer.json  devcontainer.orig.json
back/app/: main.py
back/migrations/: env.py
back/scripts/: test_async_session.py
back/src/: main.py
back/src/tuto/api/: app.py  schemas.py
back/src/tuto/api/auth/: enum.py  router.py  schemas.py
back/src/tuto/api/router/: __init__.py  auth_router.py  healthcheck_router_v2.py  user_router.py
back/src/tuto/api/router/v0_1_0/: __init__.py  version_router.py
back/src/tuto/api/router/v0_1_1/: __init__.py  version_router.py
back/src/tuto/api/router/v1_0/: __init__.py  healthcheck_router.py
back/src/tuto/api/router/v1_1/: healthcheck_router.py
back/src/tuto/api/schema/: auth_schema.py  base_schema.py  user_schema.py
back/src/tuto/api/user/: router.py
back/src/tuto/auth/: __init__.py  auth_helper.py  cognito_idp_action.py  cognito_protocol.py  cognito_token_manager.py  ip_restriction.py  local_protocol.py  protocol.py
back/src/tuto/auth/utils/: README_email_config.md  email_sender.py  password_generator.py
back/src/tuto/core/: finder.py  models.py
back/src/tuto/core/user/: finder.py  models.py  repository.py
back/src/tuto/datasource/: database.py
back/src/tuto/finder/: __init__.py  user_finder.py
back/src/tuto/model/: user.py
back/src/tuto/repository/: repository.py
back/src/tuto/repository/impl/: user_repository.py
back/src/tuto/service/: __init__.py
back/src/tuto/service/impl/: cognito_auth_service.py  local_auth_service.py
back/src/tuto/utils/: datetime_utils.py
back/src/tuto/versioning/: __init__.py  fastapi.py  openapi.py  routing.py
back/src/tuto/versioning/header_versioning/: fastapi.py  openapi.py  routing.py
back/src/tuto/versioning/path_versioning/: __init__.py  routing.py  versioning.py
back/tuto/: __init__.py
back/tuto/api/: app.py
back/tuto/api/router/: __init__.py  auth_router.py  healthcheck_router.py  user_router.py
back/tuto/auth/: auth_helper.py  cognito_token_manager.py  exceptions.py  ip_restriction.py
back/tuto/auth/utils/: email_sender.py
back/tuto/datasource/: database.py
back/tuto/model/: __init__.py  user.py
back/tuto/repository/: repository.py
back/tuto/repository/impl/: user_repository.py
back/tuto/service/: __init__.py  auth_protocol.py
back/tuto/service/impl/: cognito_auth_service.py
e2e/: .dockerignore  Dockerfile  README.txt  docker-compose.yml  package-lock.json  package.json
e2e/tests/: example.spec.ts  login.spec.ts
front/: .env  .env.testing  Dockerfile  README.md  index.html  package-lock.json  package.json
front/public/: manifest.json
front/src/: App.tsx
front/src/auth/: Errors.ts  ForgotPasswordForm.tsx  Login.tsx  MfaTotpForm.tsx  RequestNewPasswordForm.tsx  ResetPasswordForm.tsx  UserPasswordForm.tsx  authClient.ts  authProvider.ts  passwordValidator.ts  useCognitoLogin.ts
front/src/i18n/: en.ts  ja.ts
front/src/ra/: dataProvider.ts
front/src/users/: List.tsx  Row.tsx  index.ts
volumes/docker-entrypoint-initdb.d/: db.sql
